tests/chapter_15/valid/pointer_arithmetic/add_pointer_to_int.c
int main(void) {
    int arr[3] = {1, 2, 3};
    int *ptr = 2 + arr;
    return *ptr;
}